@@ -401,6 +401,8 @@ int main(int argc, char *argv[])
 {
 #ifdef WIN32
 	return win32_main(argc, argv);
+#elif __APPLE__
+	return osx_main(argc, argv);
 #else
 	return mpd_main(argc, argv);
 #endif
